--- a/containers/payments/subscription/BlackFridayModal.scss
+++ b/containers/payments/subscription/BlackFridayModal.scss
@@ -1,24 +1,15 @@
+@import '~design-system/_sass/reusable-components/_design-system-config.scss';
+
 .blackfriday-plan:hover {
 	border-color: $pm-primary;
 }
 
-.blackfriday-monthly-price .currency,
-.blackfriday-monthly-price .suffix {
-	font-size: small;
-}
-
 .blackfriday-percentage {
-	height: 4em;
-	width: 4em;
+	color: $white;
+	text-transform: uppercase;
+	top: -1.3em;
 	left: 50%;
-	transform: translate(-50%, 0);
-	top: -3em;
-	border-radius: 50%;
-	padding: 0.5em;
-}
-
-.blackfriday-countdown-container {
-	margin-bottom: 4em;
+	transform: translateX(-50%);
 }
 
 @include respond-to($breakpoint-small) {
