--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,6 +18,7 @@ $path-images: '~design-system/assets/img/shared/';
 @import '~design-system/_sass/pm-styles/pm-dropdown-logout';
 @import '~design-system/_sass/pm-styles/pm-forms';
 @import '~design-system/_sass/pm-styles/pm-tabs';
+@import '~design-system/_sass/pm-styles/pm-stepdots';
 @import '~design-system/_sass/pm-styles/pm-loadingcontent';
 @import '~design-system/_sass/pm-styles/pm-ellipsis-loader';
 @import '~design-system/_sass/pm-styles/pm-loader-animation';
