Move awesomplete styles into dedicated component

--- a/components/autocomplete/Autocomplete.scss
+++ b/components/autocomplete/Autocomplete.scss
@@ -1,5 +1,7 @@
 @import '~design-system/_sass/reusable-components/design-system-config';
 
+@import '~awesomplete/awesomplete.css';
+
 .autocomplete-input {
 	flex: 1 0 15%;
 	outline: none;
