--- a/components/version/ChangeLogModal.scss
+++ b/components/version/ChangeLogModal.scss
@@ -2,10 +2,10 @@
 
 .pm-modalContentInner-changelog {
 	h1 {
-		@include rythm($size-h2);
+		@include rhythm($size-h2);
 	}
 	h2 {
-		@include rythm($size-h4);
+		@include rhythm($size-h4);
 		margin-bottom: 0.5em;
 	}
 	ul {
