Fix link to design-system config

--- a/components/editor/SquireEditor.scss
+++ b/components/editor/SquireEditor.scss
@@ -1,4 +1,4 @@
-@import '~design-system/_sass/reusable-components/_design-system-config.scss';
+@import '~design-system/scss/config/';
 
 .simple-squire-editor.editor {
 	min-height: 14em;
