--- a/containers/payments/subscription/BlackFridayModal.scss
+++ b/containers/payments/subscription/BlackFridayModal.scss
@@ -1,5 +1,4 @@
-@import '~design-system/_sass/reusable-components/_design-system-config.scss';
-@import '~design-system/_sass/pm-styles/_pm-buttons-mixins.scss';
+@import '~design-system/scss/config/';
 
 $amount-size: 48;
 $price-size: 21;
