--- a/styles/index.scss
+++ b/styles/index.scss
@@ -43,6 +43,7 @@ $path-images: '~design-system/assets/img/shared/';
 @import '~design-system/_sass/pm-styles/pm-custom-scrollbar';
 @import '~design-system/_sass/pm-styles/pm-color-selector';
 @import '~design-system/_sass/pm-styles/pm-scrollshadow';
+@import '~design-system/_sass/pm-styles/pm-editableSection';
 
 @import '~design-system/_sass/pm-styles/pm-aside';
 @import '~design-system/_sass/pm-styles/pm-toolbar';
