--- a/containers/api/humanVerification/HumanVerificationModal.scss
+++ b/containers/api/humanVerification/HumanVerificationModal.scss
@@ -1,7 +1,7 @@
 @import '~design-system/scss/config/';
 
 .human-verification-modal {
-	.pm-field-container.payment-right {
+	.field-container.payment-right {
 		width: 70%;
 	}
 	.country-list {
@@ -13,7 +13,7 @@
 @include respond-to($breakpoint-small) {
 	.human-verification-modal {
 		.pm-label.payment-left,
-		.pm-field-container.payment-right {
+		.field-container.payment-right {
 			width: 100%;
 		}
 	}
