pm-label → label

--- a/containers/api/humanVerification/HumanVerificationModal.scss
+++ b/containers/api/humanVerification/HumanVerificationModal.scss
@@ -12,7 +12,7 @@
 
 @include respond-to($breakpoint-small) {
 	.human-verification-modal {
-		.pm-label.payment-left,
+		.label.payment-left,
 		.field-container.payment-right {
 			width: 100%;
 		}
