--- a/containers/signup/AccountPublicLayout.scss
+++ b/containers/signup/AccountPublicLayout.scss
@@ -7,7 +7,7 @@ $default-height-fields: 4.1rem;
 /* fields */
 .signup-container,
 .signLayout-container {
-	.pm-label {
+	.label {
 		font-weight: 600;
 		font-size: 1.2rem;
 		padding-bottom: 0.2em;
