--- a/containers/payments/CredisModal.scss
+++ b/containers/payments/CredisModal.scss
@@ -5,7 +5,7 @@
 }
 
 @include respond-to($breakpoint-small) {
-	.credits-modal .pm-label.payment-left,
+	.credits-modal .label.payment-left,
 	.credits-modal .field-container.payment-right {
 		width: 100%;
 	}
