--- a/containers/payments/DonateModal.scss
+++ b/containers/payments/DonateModal.scss
@@ -5,7 +5,7 @@
 }
 
 @include respond-to($breakpoint-small) {
-	.donate-modal .pm-label.payment-left,
+	.donate-modal .label.payment-left,
 	.donate-modal .field-container.payment-right {
 		width: 100%;
 	}
