--- a/containers/payments/subscription/NewSubscriptionModal.scss
+++ b/containers/payments/subscription/NewSubscriptionModal.scss
@@ -35,7 +35,7 @@
 	min-height: auto;
 }
 
-.subscription-modal .pm-label.payment-left {
+.subscription-modal .label.payment-left {
 	width: 30%;
 	min-width: var(--label-width, 18em);
 }
@@ -62,7 +62,7 @@
 }
 
 @include respond-to($breakpoint-small) {
-	.subscription-modal .pm-label.payment-left,
+	.subscription-modal .label.payment-left,
 	.subscription-modal .field-container.payment-right {
 		width: 100%;
 	}
