pm-modal → modal (+ no camel case)

--- a/containers/import/modals/ImportMailModal.scss
+++ b/containers/import/modals/ImportMailModal.scss
@@ -1,10 +1,10 @@
-.pm-modal.import-modal {
+.modal.import-modal {
 	width: 100%;
 	max-width: 120rem;
 	max-height: 90%;
 }
 
-.pm-modal.customize-import-modal {
+.modal.customize-import-modal {
 	max-width: 84rem;
 	width: 100%;
 }
