dropDown → dropdown (+ no camel case)

--- a/components/editor/SquireEditor.scss
+++ b/components/editor/SquireEditor.scss
@@ -87,7 +87,7 @@
 	opacity: 0.9;
 }
 
-.editor-toolbar-more-menu .dropDown-item.dropDown-item--no-separator {
+.editor-toolbar-more-menu .dropdown-item.dropdown-item--no-separator {
 	border-top: none;
 }
 
