ColorSelector → color-selector

--- a/components/editor/SquireEditor.scss
+++ b/components/editor/SquireEditor.scss
@@ -63,11 +63,11 @@
 	}
 }
 
-.editor-toolbar-dropdown .ColorSelector-container {
+.editor-toolbar-dropdown .color-selector-container {
 	max-width: 21rem;
 }
 
-.editor-toolbar-dropdown .ColorSelector-item {
+.editor-toolbar-dropdown .color-selector-item {
 	height: 2.8rem;
 	width: 2.8rem;
 	margin: 0 0.2rem 0.2rem 0;
