--- a/containers/payments/subscription/BlackFridayModal.scss
+++ b/containers/payments/subscription/BlackFridayModal.scss
@@ -45,8 +45,8 @@ $modal-background: #1c1736;
 	}
 
 	// currency
-	.pm-group-buttons {
-		.pm-button {
+	.grouped-buttons {
+		.button {
 			background: transparent !important; // I said I'm God.
 			color: $white;
 			border-color: $pm-tertiary-grey;
