--- a/components/dropzone/Dropzone.scss
+++ b/components/dropzone/Dropzone.scss
@@ -3,7 +3,16 @@
 .dropzone {
 	border: 5px dashed var(--bordercolor-input, $pm-global-border);
 	background: var(--bgcolor-main-area, $white);
-	opacity: 0.85;
+	opacity: 0;
+	visibility: hidden;
+	transition-property: opacity, visibility;
+	transition-duration: 0.15s;
+	transition-timing-function: easing(easeIn);
+
+	&.is-hovered {
+		opacity: 0.85;
+		visibility: visible;
+	}
 
 	&-content {
 		min-height: 100px;
