Fix - UI review

--- a/containers/contacts/widget/ContactsWidget.scss
+++ b/containers/contacts/widget/ContactsWidget.scss
@@ -1,9 +1,21 @@
-.contacts-widget {
-	min-height: 500px;
-	min-width: 500px;
-}
+@import '~design-system/scss/config/';
 
-.contacts-widget .dropdown-content {
-	min-height: 500px;
-	min-width: 500px;
+.contacts-widget {
+	.dropdown-content {
+		min-height: 500px;
+		overflow: hidden;
+		min-width: 500px;
+		@include respond-to($breakpoint-small) {
+			min-width: 100%;
+		}
+	}
+	.ReactVirtualized__Grid__innerScrollContainer {
+		border: 0;
+	}
+	@include respond-to($breakpoint-small) {
+		&.dropdown {
+			padding-left: 5%;
+			padding-right: 5%;
+		}
+	}
 }
