--- a/containers/contacts/widget/ContactsWidget.scss
+++ b/containers/contacts/widget/ContactsWidget.scss
@@ -9,6 +9,15 @@
 			min-width: 100%;
 		}
 	}
+	&-search-container,
+	&-toolbar,
+	.item-container {
+		padding-left: em(24);
+		padding-right: em(24);
+	}
+	&-search-container {
+		padding-top: em(24);
+	}
 	.ReactVirtualized__Grid__innerScrollContainer {
 		border: 0;
 	}
