--- a/containers/account/SettingsLayoutLeft.scss
+++ b/containers/account/SettingsLayoutLeft.scss
@@ -1,12 +1,12 @@
 @import '~design-system/scss/config/';
 
 .settings-layout-left {
-	width: em(217);
+	min-width: em(220);
 	padding-top: 0.5em;
 	padding-right: 0.5em;
 
 	@include respond-to($breakpoint-small, 'max') {
-		padding-bottom: 0.5em;
+		margin-bottom: 0.5em;
 		display: flex;
 		flex-direction: column;
 	}
