--- a/components/version/ChangeLogModal.scss
+++ b/components/version/ChangeLogModal.scss
@@ -2,10 +2,10 @@
 
 .modal-content-inner-changelog {
 	h1 {
-		@include rhythm($size-h2);
+		@include rhythm(map-get($title-sizes, 'h2'));
 	}
 	h2 {
-		@include rhythm($size-h4);
+		@include rhythm(map-get($title-sizes, 'h4'));
 		margin-bottom: 0.5em;
 	}
 	ul {
