[CP-1845] rework contact widget positionning

--- a/containers/contacts/widget/ContactsWidget.scss
+++ b/containers/contacts/widget/ContactsWidget.scss
@@ -2,12 +2,12 @@
 
 .contacts-widget {
 	.dropdown-content {
-		min-height: 550px;
+		/*min-height: 550px;
 		overflow: hidden;
 		min-width: 500px;
 		@include respond-to($breakpoint-small) {
 			min-width: 100%;
-		}
+		}*/
 	}
 	&-search-container,
 	&-toolbar,
